--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -1,88 +1,85 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Mission to Mars</title>
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
-
-<body class='text-white' style="background-color:rgb(19, 3, 44);">
-  <div class="container">
-
-    <!-- Jumbotron -->
-    <div class="jumbotron text-center"
-      style="background-image: url(https://p4.wallpaperbetter.com/wallpaper/324/605/138/no-man-s-sky-no-man-s-sky-next-video-games-space-wallpaper-5826bdf8f0c02cc8107c31be8882a45a.jpg); background-size: 100%; height: 100%;">
-      <h1 style="font-family:Impact;color:navy;font-size: 70px;" class="display-4;">Mission to Mars</h1>
-      <a class="btn btn-lg text-white" style="background-color:#5e0925;" href="/scrape" role="button">Scrape New
-        Data</a>
-    </div>
-
-    <!---News scraping-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head> 
+<body class="text-white" style="background-color: black;">
     <div class="container">
-      <h2 style="color:rgb(184, 196, 27); font-family:Impact">Latest Mars News</h2>
-      <h4 style="color:rgb(121, 23, 6)">{{data.news_titles[0]}}</h4>
-      <p>{{data.news_p[0]}}</p>
-    </div>
-
-    <!---Featured Image-->
-    <div class="container">
-      <div class='row'>
-        <div class="col-lg-8 col-md-8 col-sm-6 col-xm-12">
-          <h3 style="color:rgb(207, 92, 10);font-family:Impact;text-align: center;">Featured Mars Image</h3>
-          <img src="{{data.featured_image_url}}" style="max-width:100%;" alt="mars image">
-          </div>
-          <div>
-            <h3 style="color:rgb(134, 16, 81); font-family:Impact">Mars Facts</h3>
-            <table>{{ data.html_table|safe}}</table>
-          </div>
+        <!-- Jumbotron -->
+        <!--IMAGES: https://images5.alphacoders.com/508/508358.jpg / https://vfxblog.com/wp-content/uploads/2016/12/marsattacks1b.jpg / https://i.gifer.com/embedded/download/NRfS.gif -->
+        <div class="jumbotron text-center" style="background-image: url(http://gortoncenter.org/wp-content/uploads/2018/05/The-Martian.jpg); height: 400px; background-position: center; background-size: cover;">
+            <h1 class="display-3"><b>Mission to Mars</b></h1>
+            <p><a class="btn btn-danger btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
         </div>
-
-      </div>
-    </div>
-
-    <!---CONTAINTER CLOSE-->
-
-
-
-    <br>
-    <h1 style="padding-top:30px; padding-bottom: 30px; text-align: center; color:rgb(167, 167, 79);font-family:Impact;">
-      Mars Hemispheres</h1>
-
-  </div>
-  <!---body->container closed-->
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[0]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[0]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[1]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[1]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
+        <!-- NASA Mars News -->
+        <div class="container">
+            <div class="row" id="mars-news">
+                <div class="media">
+                    <div class="media-body">
+                        <h4>Latest Mars News</h4>
+                        <h5 style="color: #DC143C">{{mars.news_title}}</h5>
+                        <p style="color: #8B0000">{{mars.news_paragraph}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>   
+        <!-- JPL Mars Space Images - Featured Image -->
+        <div class="container">
+            <div class="row" id="mars-featured-image">
+                <div class="col-lg-8 col-md-8 col-sm-12">
+                <h4>Featured Mars Image</h4>
+                    <!-- If Images are False/None/Non-Existent, Then Default to Error Message -->
+                    <img src="{{mars.featured_image | default('static/images/error.png', true) }}" class="img-responsive" style="max-width:100%; max-height: auto;" alt="Mars Featured Image"/>
+                </div>
+                <!-- Mars Weather -->
+                <div class="col-lg-4 col-md-4 col-sm-12" id="mars-weather">
+                    <div class="card" style="max-width: 18rem;">
+                        <div class="card-body text-white bg-danger">
+                            <h4 class="card-title">Current Weather on Mars</h4>
+                            <p class="card-text">{{mars.weather}}</p>
+                        </div>
+                    </div>
+                    <!-- Mars Facts -->
+                    <br>
+                    <div class="row" id="mars-facts">
+                        <div class="col-md-12">
+                            <h4>Mars Facts</h4>
+                            {{mars.facts | safe}}
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[2]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[2]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
-          <div class="col-md-12">
-            <h3> {{data.hemisphere_image_urls[3]["title"]}} </h3>
-            <img src={{data.hemisphere_image_urls[3]["img_url"]}} style="max-width:100%;
-             height:auto;" />
-          </div>
+        <!-- Mars Hemispheres -->
+        <h4 style="padding-top: 50px; margin-top: 100px; text-align: center;">Mars Hemispheres</h4>
+        <div class="card-deck">
+            <hr>
+            <div class="col-md-12">
+                <div class="row" id="mars-hemispheres">
+                    {% for hemisphere in mars.hemispheres %}
+                    <div class="col-md-6">
+                        <div class="card text-white bg-danger" style="margin: 30px;">
+                            <!-- If Images are False/None/Non-Existent, Then Default to Error Message -->
+                            <img class="card-img-top" src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..."/>
+                            <div class="card-body">
+                                <p class="card-text">{{hemisphere.title}}</p>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
-      </div>
     </div>
+    <!-- Bootstrap JavaScript -->
+    <!-- jQuery, Popper.js & Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
 </html>
