--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -1,85 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mission to Mars</title>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head> 
-<body class="text-white" style="background-color: black;">
+    <meta charset="UTF-8">
+    <title>Mission to Mars</title>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+</head>
+        
+        
+
+    <style>
+        h1 {
+            color: navy;
+            font-size: 45px;
+            font-weight: bold;
+            /* font-style: italic; */
+            /* text-align:center; */
+        }
+
+        h2 {
+            /* color:lightcyan; */
+            font-size: 24px;
+            text-align: left;
+        }
+
+        h3 {
+            color: black;
+            font-size: 18px;
+            /* text-decoration: underline; */
+            /* font-style: italic; */
+            text-align: left;
+        }
+
+        h4 {
+            color: black;
+            font-size: 22px;
+            font-weight: bold;
+            /* text-decoration: underline; */
+            /* font-style: italic; */
+            text-align: center;
+        }
+
+        body {
+            width: 100%;
+            min-height: 100%;
+            background-color: white;
+        }
+
+        img {
+            width: 100%;
+        }
+
+        .boxborder {
+            /* background: lightgray; */
+            padding: 10px;
+            border: lightgray 2px solid;
+        }
+
+        .boxmargin {
+            /* background: lightgray; */
+            padding: 2px;
+            border: lightgray 2px solid;
+            margin: 10px 0px 10px 0px;
+        }
+    </style>
+</head>
+
+<body>
     <div class="container">
-        <!-- Jumbotron -->
-        <!--IMAGES: https://images5.alphacoders.com/508/508358.jpg / https://vfxblog.com/wp-content/uploads/2016/12/marsattacks1b.jpg / https://i.gifer.com/embedded/download/NRfS.gif -->
-        <div class="jumbotron text-center" style="background-image: url(http://gortoncenter.org/wp-content/uploads/2018/05/The-Martian.jpg); height: 400px; background-position: center; background-size: cover;">
-            <h1 class="display-3"><b>Mission to Mars</b></h1>
-            <p><a class="btn btn-danger btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <div class="jumbotron text-center">
+            <h1>Mission to Mars</h1>
+            <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
         </div>
-        <!-- NASA Mars News -->
-        <div class="container">
-            <div class="row" id="mars-news">
-                <div class="media">
-                    <div class="media-body">
-                        <h4>Latest Mars News</h4>
-                        <h5 style="color: #DC143C">{{mars.news_title}}</h5>
-                        <p style="color: #8B0000">{{mars.news_paragraph}}</p>
-                    </div>
-                </div>
-            </div>
-        </div>   
-        <!-- JPL Mars Space Images - Featured Image -->
-        <div class="container">
-            <div class="row" id="mars-featured-image">
-                <div class="col-lg-8 col-md-8 col-sm-12">
-                <h4>Featured Mars Image</h4>
-                    <!-- If Images are False/None/Non-Existent, Then Default to Error Message -->
-                    <img src="{{mars.featured_image | default('static/images/error.png', true) }}" class="img-responsive" style="max-width:100%; max-height: auto;" alt="Mars Featured Image"/>
-                </div>
-                <!-- Mars Weather -->
-                <div class="col-lg-4 col-md-4 col-sm-12" id="mars-weather">
-                    <div class="card" style="max-width: 18rem;">
-                        <div class="card-body text-white bg-danger">
-                            <h4 class="card-title">Current Weather on Mars</h4>
-                            <p class="card-text">{{mars.weather}}</p>
-                        </div>
-                    </div>
-                    <!-- Mars Facts -->
-                    <br>
-                    <div class="row" id="mars-facts">
-                        <div class="col-md-12">
-                            <h4>Mars Facts</h4>
-                            {{mars.facts | safe}}
-                        </div>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col col-12">
+                <h2>Latest Mars News</h2>
+                <h3>{{mars.news_title}}</h3>
+                {{mars.news_p}}
             </div>
         </div>
-        <!-- Mars Hemispheres -->
-        <h4 style="padding-top: 50px; margin-top: 100px; text-align: center;">Mars Hemispheres</h4>
-        <div class="card-deck">
-            <hr>
-            <div class="col-md-12">
-                <div class="row" id="mars-hemispheres">
-                    {% for hemisphere in mars.hemispheres %}
-                    <div class="col-md-6">
-                        <div class="card text-white bg-danger" style="margin: 30px;">
-                            <!-- If Images are False/None/Non-Existent, Then Default to Error Message -->
-                            <img class="card-img-top" src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..."/>
-                            <div class="card-body">
-                                <p class="card-text">{{hemisphere.title}}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
+        <div class="row">
+            <div class="col col-8">
+                <h2>Featured Mars Image</h2>
+                <img src={{mars.featured_image_url}} alt="Featured image">
+            </div>
+            <div class="col col-4">
+                <div class="boxborder">
+                <h3>Mars Facts</h3>
+                {{mars.facts | safe}}
             </div>
         </div>
-    </div>
-    <!-- Bootstrap JavaScript -->
-    <!-- jQuery, Popper.js & Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <br><br>
+        <div class="row">
+            <div class="col col-12">
+                <h4>Mars Hemisphere</h4>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            {% for image_url in  mars.hemisphere_image_urls %}
+            <div class="col col-6">
+                <div class="boxmargin">
+                    <img src={{image_url.img_url}} alt={{image_url.img_url}}>
+                    <h3>{{image_url.title}}</h3>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div> <!-- End of container -->
 </body>
+
 </html>
