--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -103,11 +103,11 @@
         </div>
         <hr>
         <div class="row">
-            {% for image_url in  mars.hemisphere_image_urls %}
+            {% for hemisphere in  mars.hemisphere_image_urls %}
             <div class="col col-6">
                 <div class="boxmargin">
-                    <img src={{image_url.img_url}} alt={{image_url.img_url}}>
-                    <h3>{{image_url.title}}</h3>
+                    <img src={{hemispheres.img_url}} alt={{hemispheres.img_url}}>
+                    <h3>{{hemispheres.title}}</h3>
                 </div>
             </div>
             {% endfor %}
