--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -2,214 +2,118 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mission to Mars</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ url_for('static',filename='css/reset.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
+    <meta charset="UTF-8">
+    <title>Mission to Mars</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <style>
-    html, body {
-      min-height: 100vh;
-      min-height: 100%;
-      text-align: left;
-    }
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      background: black;
-    }
+    <style>
+        h1 {
+            color: navy;
+            font-size: 45px;
+            font-weight: bold;
+            /* font-style: italic; */
+            /* text-align:center; */
+        }
 
-    .container {
-      width: 100%;
-      padding: 0px;
-      margin: 0px;
-    }
-    
-    .container-fluid, .row {
-      margin: 0px;
-      padding: 0px;
-    }
+        h2 {
+            /* color:lightcyan; */
+            font-size: 24px;
+            text-align: left;
+        }
 
-    .header {
-      font-weight: bold;
-      color: #333;
-    }
+        h3 {
+            color: black;
+            font-size: 18px;
+            /* text-decoration: underline; */
+            /* font-style: italic; */
+            text-align: left;
+        }
 
-    h1 {
-      font-size: 30px;
-      padding-bottom: 40px;
-      color: #FFF; 
-      font-weight: normal; 
-      text-shadow: #000 2px 2px 3px;
-    }
+        h4 {
+            color: black;
+            font-size: 22px;
+            font-weight: bold;
+            /* text-decoration: underline; */
+            /* font-style: italic; */
+            text-align: center;
+        }
 
-    h3 {
-      font-size: 24px;
-      padding: 0px;
-      padding-bottom: 10px;
-    }
+        body {
+            width: 100%;
+            min-height: 100%;
+            background-color: white;
+        }
 
-    .weather-header {
-      padding: 0px;
-      padding-bottom: 20px;
-    }
+        img {
+            width: 100%;
+        }
 
-    h5 {
-      font-size: 18px;
-      padding: 10px 0px;
-    }
+        .boxborder {
+            /* background: lightgray; */
+            padding: 10px;
+            border: lightgray 2px solid;
+        }
 
-    h1, .button-p {
-      margin: auto;
-      display: block;
-      text-align: center;
-    }
-
-    .col-xs-12 {
-      padding: 0px;
-    }
-
-    .card {
-      margin: 0px;
-      padding: 0px 2%;
-    }
-
-    .feature-fact {
-      border-top: 7px solid #e4e9ef;
-      /* border-top: 4px solid rgb(75, 106, 141); */
-    }
-
-    .featured-image, .mars-facts {
-      padding: 40px 4%;
-      background: #e4e9ef;
-      background: #FFF;
-      margin: 0px;
-    }
-
-    .card-img-bottom, .table-responsive {
-      margin-top: 20px;
-    }
-
-    .hemispheres {
-      margin-top: 50px;
-      margin-left: 15px;
-      margin-right: 15px;
-      margin-bottom: 40px;
-    }
-
-    .card-hemispheres {
-      padding: 15px;
-      margin: 0px;
-      width: 100%;
-      display: block;
-      margin: auto;
-    }
-
-    .header-hemispheres {
-      text-align: center;
-      color: #FFF; 
-      text-shadow: #000 2px 2px 3px;
-      padding-bottom: 20px;
-    }
-
-    .card-body-hemisphere {
-      border: 1px solid rgb(200, 200, 200);
-      padding: 2px;
-      background: #fff;
-    }
-
-    .hemisphere-title {
-      margin-left: 10px;
-    }
-
-    img {
-      width: 100%;
-    }
-
-    th {
-      font-weight: bold;
-    }
-
-    th, td {
-      text-align: center;
-    }
-
- 
-  </style>
+        .boxmargin {
+            /* background: lightgray; */
+            padding: 2px;
+            border: lightgray 2px solid;
+            margin: 10px 0px 10px 0px;
+        }
+    </style>
 </head>
 
 <body>
-
-  <div class="container">
-    <div class="jumbotron">
-      <h1 class="header" style="color: #FFF; font-weight: normal; text-shadow: #000 2px 2px 3px;">Mission to Mars</h1>
-      <p class="button-p"><a class="btn btn-primary btn-lg button-text" href="/scrape" role="button">Scrape New Data</a></p>
-    </div>
-
-    {% if mars.news_title %}
-    <div class="container-fluid">
-        <div class="col-md-6 col-xs-12 left">
-          <div class="card news">
-            <h3 class="card-header header">Latest Mars News</h3>
-            <div class="card-body">
-              <h5 class="card-title header">{{ mars["news_title"] }}</h5>
-              <p class="card-text">{{ mars["news_p"] }}</p>
+    <div class="container">
+        <div class="jumbotron text-center">
+            <h1>Mission to Mars</h1>
+            <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        </div>
+        <div class="row">
+            <div class="col col-12">
+                <h2>Latest Mars News</h2>
+                <h3>{{marspage.news_title}}</h3>
+                {{marspage.news_p}}
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row feature-fact">
-        <div class="col-md-6 col-xs-12 left">
-          <div class="featured-image card">
-            <h3 class="card-header header">Featured Mars Image</h3>
-            <img class="card-img-bottom" src={{ mars["featured_image_url"] }} alt="Featured Mars Image">
-          </div>
-        </div>
-        <div class="col-md-6 col-xs-12 right">
-          <div class="mars-facts card">
-            <h3 class="card-header header">Mars Facts</h3>
-            <div class="table-responsive">
-              <table class="table table-striped table-hover table-sm">
-                {{ mars.facts | safe }}
-              </table>
+        <div class="row">
+            <div class="col col-8">
+                <h2>Featured Mars Image</h2>
+                <img src={{mars.featured_image_url}} alt="Featured image"
+                <br>
+                <h3>Mars Facts</h3>
+                {{mars.facts| safe}}
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-        <div class="row hemispheres">
-            <h3 class="header header-hemispheres">Mars Hemisphere</h3>
-            {% for item in mars["hemispheres"] %}
-              <div class="col-md-6 col-xs-12">
-                <div class="card card-hemispheres"> <!--bg-light mb-3-->
-                  <div class="card-body card-body-hemisphere">
-                    <img class="card-img-top" src={{ mars.img_url }} alt="Mars hemisphere image">
-                    <h5 class="card-title header hemisphere-title">{{ mars.title }}</h5>
-                  </div>
+        <br><br>
+        <div class="row">
+            <div class="col col-12">
+                <h4>Mars Hemisphere</h4>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            {% for image_url in  marss.hemispheres %}
+            <div class="col col-6">
+                <div class="boxmargin">
+                    <img src={{mars.img_url}} alt={{mars.img_url}}>
+                    <h3>{{mars.title}}</h3>
                 </div>
-              </div>
+            </div>
             {% endfor %}
         </div>
-    </div>
-    {% endif %}
-    
-
-  </div>
-
-  <!-- JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-
+    </div> <!-- End of container -->
 </body>
 
 </html>
-
