--- a/Mission_to_Mars/templates/index.html
+++ b/Mission_to_Mars/templates/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 text-center">
                 <h2>Mars Hemisphere</h2>
                 <hr>
             </div>
@@ -47,12 +47,11 @@
 
         <div class="row">
             {% for hemispheres in mars.hemispheres %}
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="{{ hemispheres.img_url }}" class="card-img-top image-photos" alt="...">
-                        <h3 class="card-title">{{ hemispheres.title }} Enhanced</h3>
-                    </div>
+               <div class="col-md-3 text-center">
+                  <div class="card text-center" style="width: 12px;">
+                    <img class="card-img-top text-center" id="scale_id" src="{{ hemispheres.img_url }}"style="width:200px;height:200px;border-style: solid>
+                      <div class="card-body text-center">
+                        <h5 class="card-title">{{ hemispheres.title }}</h5>
                 </div>
             </div>
             {% endfor %}
